CHANGE LOG of KeyTalk
=================================================================

server-5.4.1, 2 November 2018
----------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.4.1, v4.6.0 and v4.6.2
    - ADDED: REST API authentication connector (KEYTALK-478)
    - ADDED: Cluster administrator role (KEYTALK-491)
    - CHANGED: Try storing S/MIME certificate to LDAP as a real user first falling back to LDAP service user if one defined
    - FIXED: Do not renew GlobalSign orders expired more than 7 days ago

    CHANGED shared Db schema:
      - version 4.0-> 5.0

client-5.4.0, 15 October 2018
----------------------
    - ADDED: Allow using OS logon username as KeyTalk client username (KEYTALK-471)
    - ADDED: Support for Tomcat web server certificate renewal for Linux clients
    - FIXED: KeyTalk client should not remove S/MIME certificates (KEYTALK-476)


server-5.4.0, 15 October 2018
----------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.4.0, v4.6.0 and v4.6.2
    - ADDED: Allow using OS logon username as KeyTalk client username (KEYTALK-471)
    - ADDED: Add Bcrypt support for MySQL authentication connector (KEYTALK-468)
    - ADDED: Try renewing GlobalSign mSSL order iso requesting a new one whenever possible (KEYTALK-472)
    - ADDED: Forcibly reboot the server after 1 day after pending reboot as a result of installed updates (KEYTALK-475)
    - FIXED: The just enrolled certificate does not show up on WebUI because validity margin for cert. reuse is not satisfied (KEYTALK-470)

    CHANGED shared Db schema:
      - version 3.2-> 4.0

server-5.3.3, 14 September 2018
----------------------------
Support upgrades from v5.2.1 and higher
Supports RCDP 2.3.0, 2.2.0, 2.1.0 and 2.0.0
Support import of settings created in v5.2.0-v5.3.3, v4.6.0 and v4.6.2